tests/e2e/explicit_cast3.story
a = [1, 2] as boolean
